--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -26,6 +26,6 @@
     android:id="@+id/reset"
     android:icon="@drawable/ic_reset"
     android:title="@string/reset"
-    app:showAsAction="ifRoom"/>
+    app:showAsAction="never"/>
 
 </menu>
